# pink_perilla

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  GEMINI.md  README.md
include/: parser_combinator.hpp  pink_perilla.hpp  sql_parser.hpp  substrait_converter.hpp  table_definition.hpp
include/detail/: sql_parser.hpp  utils.hpp
src/: main.cpp  pink_perilla.cpp  sql_parser.cpp  substrait_converter.cpp
tests/: README.md  ddl_test.cpp  delete_test.cpp  insert_test.cpp  join_test.cpp  misc_features_test.cpp  parser_test.cpp  proto_tools.h  robustness_test.cpp  select_test.cpp  table_definition_test.cpp  update_test.cpp
